<resources>
    <string name="ACMinString">min</string>
    <string name="ACWorking">The climate control operation time cannot be changed when the climate control has been turned on by the timer or remote control.</string>
    <string name="ACtim"><ul><li>"The Remote Climate Control Function must not be used to keep the vehicle cool or warm while people or pets are in the parked vehicle. Unexpected accidents may occur.

"</li><li>"Longer operation of the climate control will further reduce the drive battery level.

"</li><li>If the drive battery is low, the actual climate control operation time may be shorter than originally set.</li></ul></string>
    <string name="ACtimeLabel">Operation time</string>
    <string name="AcsettingARM">"If the security alarm is enabled, vehicle settings can't be changed. Please unlock the vehicle through keyless entry or with the key-less operation system.

This will disable the security system, allowing vehicle settings to be changed"</string>
    <string name="EVInit">Reset</string>
    <string name="EVInitInfo">Do you want to reset the vehicle settings?</string>
    <string name="Everyday">Everyday</string>
    <string name="ResetAllschude">Do you want to reset all schedules?</string>
    <string name="ResetOneschude">Do you want to reset this schedule?</string>
    <string name="Schudle">Schedule</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accstr">ACC(orange)</string>
    <string name="acoptiontimelong2">Climate Operation Time</string>
    <string name="apacheLicenseeightLink">8. Limitation of Liability. In no event and under no legal theory, whether in tort (including negligence), contract, or otherwise, unless required by applicable law (such as deliberate and grossly negligent acts) or agreed to in writing, shall any Contributor be liable to You for damages, including any direct, indirect, special, incidental, or consequential damages of any character arising as a result of this License or out of the use or inability to use the Work (including but not limited to damages for loss of goodwill, work stoppage, computer failure or malfunction, or any and all other commercial damages or losses), even if such Contributor has been advised of the possibility of such damages.</string>
    <string name="apacheLicensefiveLink">5. Submission of Contributions. Unless You explicitly state otherwise, any Contribution intentionally submitted for inclusion in the Work by You to the Licensor shall be under the terms and conditions of this License, without any additional terms or conditions. Notwithstanding the above, nothing herein shall supersede or modify the terms of any separate license agreement you may have executed with Licensor regarding such Contributions.</string>
    <string name="apacheLicensefourLink">"4. Redistribution. You may reproduce and distribute copies of the Work or Derivative Works thereof in any medium, with or without modifications, and in Source or Object form, provided that You meet the following conditions:
a.You must give any other recipients of the Work or Derivative Works a copy of this License; and
b.You must cause any modified files to carry prominent notices stating that You changed the files; and
c.You must retain, in the Source form of any Derivative Works that You distribute, all copyright, patent, trademark, and attribution notices from the Source form of the Work, excluding those notices that do not pertain to any part of the Derivative Works; and\\nd.If the Work includes a \"NOTICE\" text file as part of its distribution, then any Derivative Works that You distribute must include a readable copy of the attribution notices contained within such NOTICE file, excluding those notices that do not pertain to any part of the Derivative Works, in at least one of the following places: within a NOTICE text file distributed as part of the Derivative Works; within the Source form or documentation, if provided along with the Derivative Works; or, within a display generated by the Derivative Works, if and wherever such third-party notices normally appear. The contents of the NOTICE file are for informational purposes only and do not modify the License. You may add Your own attribution notices within Derivative Works that You distribute, alongside or as an addendum to the NOTICE text from the Work, provided that such additional attribution notices cannot be construed as modifying the License.

You may add Your own copyright statement to Your modifications and may provide additional or different license terms and conditions for use, reproduction, or distribution of Your modifications, or for any such Derivative Works as a whole, provided Your use, reproduction, and distribution of the Work otherwise complies with the conditions stated in this License."</string>
    <string name="apacheLicensenineLink">9. Accepting Warranty or Additional Liability. While redistributing the Work or Derivative Works thereof, You may choose to offer, and charge a fee for, acceptance of support, warranty, indemnity, or other liability obligations and/or rights consistent with this License. However, in accepting such obligations, You may act only on Your own behalf and on Your sole responsibility, not on behalf of any other Contributor, and only if You agree to indemnify, defend, and hold each Contributor harmless for any liability incurred by, or claims asserted against, such Contributor by reason of your accepting any such warranty or additional liability.</string>
    <string name="bgdark" />
    <string name="cancel">Cancel</string>
    <string name="changessidchartable">"0-9 A-Z a-z
! # $ % &amp; ' ( ) * + - _ / : ; &lt; = > ? @ [ \\ ] ^ _ ` { | } ~"</string>
    <string name="changessidhelpinfo">The available characters are as follows:</string>
    <string name="delay3">10 min</string>
    <string name="delay4">20 min</string>
    <string name="delay5">30 min</string>
    <string name="evOK">OK</string>
    <string name="evpspage1">Using this App, you can supply power from your hybrid or electric vehicle to your home using the External Power Supply (V2H / V2L equipment).</string>
    <string name="fri">Friday</string>
    <string name="mon">Monday</string>
    <string name="sat">Saturday</string>
    <string name="sendNavi">Car navigation is being operated...</string>
    <string name="sendOK">Completed</string>
    <string name="setSend">Send</string>
    <string name="setinfo_changewpaonestr">Change Wireless LAN Password</string>
    <string name="setinfo_changewpatwostr">You may change the vehicle Wireless LAN Password.</string>
    <string name="setinfoeightstr">You may cancel VIN Registration. You will not be able to communicate with the vehicle after cancellation. Re-registration is necessary to communicate again.</string>
    <string name="setinfoelevenstr">Wireless LAN Channel Settings</string>
    <string name="setinfofifteenstr">Theft Alarm History</string>
    <string name="setinfofivestr">Change SSID</string>
    <string name="setinfofourstr">You may change the necessity of Passcode protection at App Initialization.</string>
    <string name="setinfofourteenstr">You may change the vehicle settings. (ETACS Customize)</string>
    <string name="setinfoninestr">Wireless LAN Communication Settings</string>
    <string name="setinfoonestr">Passcode Bypass</string>
    <string name="setinfosevenstr">Cancel VIN Registration</string>
    <string name="setinfosisteenstr">Displays previous Theft Alarm Activations</string>
    <string name="setinfosixstr">You may change the vehicle SSID.</string>
    <string name="setinfotenstr">You may choose wireless LAN communication is always ON or wireless LAN communication is ON when the power switch of the vehicle is OFF.</string>
    <string name="setinfothirteenstr">Vehicle settings</string>
    <string name="setinfothreestr">Change Passcode</string>
    <string name="setinfotwelvestr">You may choose a Wireless LAN Channel. After changing the Wireless LAN channel, wireless communication will disconnect and then reconnect automatically.If the app has not reconnected after 5 minutes, please close the app and check the Wireless LAN connection to the vehicle on the Wifi settings screen.</string>
    <string name="setinfotwostr">You may decide the necessity of Passcode protection at App Initialization.</string>
    <string name="setnewssidinfo">New SSID</string>
    <string name="setoldssidinfo">SSID</string>
    <string name="setssidinfo">You may choose 1~32 characters in length. Capital and lower case letters are separately recognized.</string>
    <string name="sun">Sunday</string>
    <string name="thu">Thursday</string>
    <string name="tue">Tuesday</string>
    <string name="v2hv2l">Startup the External Power Supply</string>
    <string name="wed">Wednesday</string>
</resources>