<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#fff4f4f4" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/settinghelptoplayotu" android:layout_width="fill_parent" android:layout_height="@dimen/dp_80" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" layout="@layout/timerlist_title" />
    <ScrollView android:background="@color/white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/settinghelptoplayotu" android:layout_marginStart="@dimen/dp_8" android:layout_marginEnd="@dimen/dp_8">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dp_20" android:layout_marginEnd="@dimen/dp_20">
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_14" android:text="@string/setinfoonestr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfotwostr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfothreestr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfofourstr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfosevenstr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfoeightstr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfofivestr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfosixstr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfo_changewpaonestr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfo_changewpatwostr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfoninestr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfotenstr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfoelevenstr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfotwelvestr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfothirteenstr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/setinfofourteenstr" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/v2hv2l" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/evpspage1" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="#ff101010" android:layout_gravity="center_vertical" android:id="@id/set_help_t10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/setinfofifteenstr" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="#ff969696" android:layout_gravity="center_vertical" android:id="@id/set_help_c10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:layout_marginBottom="@dimen/dp_36" android:text="@string/setinfosisteenstr" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="#fff4f4f4" android:layout_width="fill_parent" android:layout_height="@dimen/dp_10" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>