<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/ac_timer_dayselector_title" android:layout_width="fill_parent" android:layout_height="@dimen/dp_80" layout="@layout/timerlist_title" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dp_16" android:layout_below="@id/ac_timer_dayselector_title">
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_sun" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:text="@string/sun" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_mon" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:text="@string/mon" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_tue" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:text="@string/tue" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_wed" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:text="@string/wed" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_thu" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:text="@string/thu" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_fri" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:maxHeight="@dimen/dp_76" android:text="@string/fri" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textAppearance="@style/black16sp" android:gravity="start|center" android:id="@id/btn_sat" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginTop="@dimen/dp_1" android:text="@string/sat" android:layout_weight="1.0" android:paddingStart="@dimen/dp_24" android:paddingEnd="0.0dip" app:MmcTypeface="1" />
    </LinearLayout>
</RelativeLayout>