<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/dlgbgmask" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:cursorVisible="false">
        <ImageView android:id="@id/backimage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/bgdark" />
    </LinearLayout>
    <com.inventec.controls.AutoResizeTextView android:textSize="30.0sp" android:gravity="center" android:id="@id/tv" android:background="@drawable/waku" android:padding="15.0dip" android:layout_width="280.0dip" android:layout_height="177.0dip" android:text="@string/sendNavi" android:layout_centerInParent="true" />
    <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/tv" android:layout_alignParentBottom="true">
        <com.inventec.controls.MyButton android:textSize="24.0sp" android:textStyle="bold" android:id="@id/btnOk" android:layout_width="130.0dip" android:layout_height="45.0dip" android:text="@string/evOK" />
    </LinearLayout>
</RelativeLayout>