<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/launch_background_image" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/ssidtoplayout" android:layout_width="fill_parent" android:layout_height="@dimen/dp_80" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" layout="@layout/helpnav_title" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/ssidsecondlayout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_80" android:layout_marginTop="@dimen/dp_37" android:layout_below="@id/ssidtoplayout" app:layout_constraintHorizontal_bias="0.0">
        <com.inventec.controls.MmcFontTextView android:textSize="@dimen/sp_16" android:textColor="#ff000000" android:gravity="start|center" android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_60" android:text="@string/setoldssidinfo" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_24" app:MmcTypeface="1" />
        <com.inventec.controls.MmcFontTextView android:textSize="@dimen/sp_16" android:textColor="#3d000000" android:gravity="center_vertical" android:id="@id/ssidsecondlayoutrightview" android:layout_width="@dimen/dp_150" android:layout_height="@dimen/dp_60" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_173" android:layout_alignParentStart="true" app:MmcTypeface="1" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@id/ssidthreelayout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_80" android:layout_marginTop="@dimen/dp_2" android:layout_below="@id/ssidsecondlayout">
        <com.inventec.controls.MmcFontTextView android:textSize="@dimen/sp_16" android:textColor="#ff000000" android:gravity="start|center" android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_60" android:text="@string/setnewssidinfo" android:layout_centerVertical="true" android:layout_marginStart="@dimen/dp_24" app:MmcTypeface="1" />
        <EditText android:textSize="@dimen/sp_16" android:textColor="#ff646464" android:id="@id/ed2" android:background="@null" android:layout_width="@dimen/dp_220" android:layout_height="@dimen/dp_80" android:layout_centerVertical="true" android:inputType="textPassword" android:layout_marginStart="@dimen/dp_168" android:layout_marginEnd="@dimen/dp_17" android:layout_alignParentStart="true" />
    </RelativeLayout>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/ssidsendbtn" android:layout_below="@id/ssidthreelayout">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_14" android:textColor="#3d000000" android:id="@id/ssid_tip_one" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_36" android:text="@string/setssidinfo" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
            <TextView android:textSize="@dimen/sp_14" android:textColor="#3d000000" android:id="@id/ssid_tip_two" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/changessidhelpinfo" android:singleLine="false" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
            <TextView android:textSize="@dimen/sp_14" android:textColor="#3d000000" android:gravity="start|center" android:id="@id/ssid_tip_three" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/changessidchartable" android:layout_marginStart="@dimen/dp_10" android:layout_marginEnd="@dimen/dp_10" />
        </LinearLayout>
    </ScrollView>
    <com.inventec.controls.MyButton android:textSize="@dimen/sp_16" android:textColor="#ffffffff" android:id="@id/ssidsendbtn" android:background="@drawable/btn_big_red" android:layout_width="@dimen/dp_351" android:layout_height="@dimen/dp_72" android:layout_marginBottom="@dimen/dp_17" android:text="@string/setSend" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:buttonShadowType="red" />
</RelativeLayout>